--- a/Omukade.AutoPAR/Omukade.AutoPAR.csproj
+++ b/Omukade.AutoPAR/Omukade.AutoPAR.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.Win32.Registry" Version="5.0.0" />
 		<PackageReference Include="Mono.Cecil" Version="0.11.4" />
 	</ItemGroup>
 </Project>
