Add Rainier module for rewriting GameState; Expose ParCore in AssemblyLoadInterceptor so additional rewrite modules can be added by 3rd-pary programs; ManualPAR: add command-line flag to enable Rainier rewrites

--- a/Omukade.ManualPAR/Properties/launchSettings.json
+++ b/Omukade.ManualPAR/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Omukade.ManualPAR": {
       "commandName": "Project",
-      "commandLineArgs": "--fetch-update"
+      "commandLineArgs": "--fetch-update --rainier-specific"
     }
   }
 }
